# pilk-nogil

./: .clang-format  .gitignore  PKG-INFO  README.md  pyproject.toml  setup.py
.github/workflows/: python-publish.yml
pilk_nogil/: SilkDecoder.py  SilkEncoder.py  __init__.py  _pilk.pyi
src/: pilkmodule.c
src/silk/: constant.c  constant.h  memory_buffer.h  pilk_decode.c  pilk_decode.h  pilk_encode.c  pilk_encode.h  utils.c  utils.h
