[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pilk-nogil"
version = "0.4.2"
description = "python silk voice library"
readme = "README.md"
requires-python = ">=3.6"
license = "GPL-3.0"
authors = [
    { name = "foyou", email = "yimi.0822@qq.com" },
    { name = "MelodyYuuka", email = "melody@yunmengdu.cn" },
]
maintainers = [{ name = "MelodyYuuka", email = "melody@yunmengdu.cn" }]
keywords = [
    "silk",
    "voice",
    "python",
    "extension",
    "wechat",
    "qq",
    "tencent",
    "xposed",
    "c/c++",
]
dependencies = ["typing_extensions"]
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: End Users/Desktop',
    'Natural Language :: Chinese (Simplified)',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: POSIX',
    'Programming Language :: C',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3.14',
    'Programming Language :: Python :: 3.15',
    "Programming Language :: Python :: Implementation",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: Implementation :: GraalPy",
    "Programming Language :: Python :: Free Threading",
    "Programming Language :: Python :: Free Threading :: 2 - Beta",
    'Topic :: Multimedia :: Sound/Audio',
]

[tool.setuptools]
packages = ["pilk_nogil"]
zip-safe = false

[tool.setuptools.package-data]
pilk_nogil = ["_pilk.pyi"]
